[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/stamp/StampBotApproved.png" type="Texture" id=1]
[ext_resource path="res://sprites/stamp/InkApproved.png" type="Texture" id=2]
[ext_resource path="res://scripts/stamp.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 38, 32 )

[node name="stamp" type="Node2D"]
light_mask = 993
z_index = 5
script = ExtResource( 3 )

[node name="InkApproved" type="Sprite" parent="."]
position = Vector2( 0, 8 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="Stamp_a" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="stamp_1" type="Area2D" parent="."]
scale = Vector2( 0.5, 0.5 )
priority = 6.0
collision_layer = 1008
collision_mask = 1008

[node name="cs1" type="CollisionShape2D" parent="stamp_1"]
shape = SubResource( 1 )
[connection signal="area_exited" from="stamp_1" to="." method="_on_stamp_1_area_exited"]
[connection signal="area_shape_entered" from="stamp_1" to="." method="_on_stamp_1_area_shape_entered"]
[connection signal="area_shape_exited" from="stamp_1" to="." method="_on_stamp_1_area_shape_exited"]
[connection signal="input_event" from="stamp_1" to="." method="_on_stamp_1_input_event"]
